# CFT-_task

./: .env  .env-for-dep  Dockerfile  READ.txt  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 293d4eae1d1a_initial.py  67cd56493c88_initial.py  82a71b5998a3_initial.py
src/: config.py  database.py
src/accounting/: models.py  routers.py  schemas.py
src/auth/: base_config.py  manager.py  models.py  schemas.py
tests/: conftest.py  test_all.py  test_auth.py
urn/: test_auth_2.py
