[tool.pytest.ini_options]
pythonpath = [".", "src", ]
asyncio_mode="auto"

[tool.poetry]
name = "cft-poetry"
version = "0.1.0"
description = ""
authors = ["AleksandrMednikov <s.nn2014@yandex.ru>"]
readme = "README.md"
packages = [{include = "cft_poetry"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"
fastapi = {extras = ["all"], version = "^0.96.0"}
asyncpg = "^0.27.0"
alembic = "^1.11.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^11.0.0"}
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.15"
pytest-asyncio = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"